--- a/Wisielec/public_html/style.css
+++ b/Wisielec/public_html/style.css
@@ -2,12 +2,33 @@ body {
   background-color: #000000;
   color: lightgray;
   font-size: 28px;
+  font-family: 'VT323', monospace;
 }
 
 #pojemnik {
   width: 900px;
   margin-left: auto;
   margin-right: auto;
+}
+
+#wczytanieHasla {
+  margin-left: 300px;
+  margin-right: 300px;
+}
+
+#nowe_Haslo {
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 280px;
+  align-items: center;
+}
+
+#przyciskWczytaj {
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 0px;
+  width: 284px;
+  cursor: pointer;
 }
 
 #plansza {
@@ -35,7 +56,7 @@ body {
 
 .litera {
   width: 30px;
-  height: 30ps;
+  height: 30px;
   text-align: center;
   padding: 5px;
   margin: 5px;
@@ -49,4 +70,14 @@ body {
   background-color: #222222;
   color: white;
   border: 3px solid white;
+}
+
+.reset {
+  color: green;
+  cursor: pointer;
+  font-size: 48px;
+}
+
+.reset:hover {
+  color: white;
 }
