--- a/MemoryGame/style.css
+++ b/MemoryGame/style.css
@@ -54,4 +54,19 @@ p {
   display: inline-block;
   margin: 3px;
   background-image: url("img/karta.png");
+  border: 4px solid #51c8b2;
+  border-radius: 4px;
+  cursor: pointer;
+  filter: brightness(70%);
+  transition: all .3s ease-in-out;
+}
+
+.card:hover {
+  border: 4px solid #e9b64a;
+  filter: brightness(100%);
+}
+
+.score {
+  margin-top: 5px;
+  letter-spacing: 2px;
 }
