--- a/MemoryGame/style.css
+++ b/MemoryGame/style.css
@@ -48,6 +48,19 @@ p {
   text-align: center;
 }
 
+.cardActive {
+  width: 125px;
+  height: 125px;
+  display: inline-block;
+  margin: 3px;
+  background-image: url("img/karta.png");
+  border: 4px solid #e9b64a;
+  border-radius: 4px;
+  cursor: default;
+  filter: brightness(100%);
+  transition: all .3s ease-in-out;
+}
+
 .card {
   width: 125px;
   height: 125px;
